msg item fix: words now wrap correctly when the message is > max message width - previously would break on the letter instead of before the word started

--- a/src/chat/style/chat_message_list_item.css
+++ b/src/chat/style/chat_message_list_item.css
@@ -130,7 +130,7 @@
     }
 
 .new-item-msg {
-    word-break: break-all;
+    word-break: break-word;
 
     color: var(--chat-msg-text-fg);
 }
